--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Worldle Help</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="index.css?v=1">
 </head>
 <body>
     <div id="app"></div>
-    <script src="index.js" type="module"></script>
+    <script src="index.js?v=1" type="module"></script>
 </body>
 </html>
