--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Worldle Help</title>
+    <meta name="google-site-verification" content="2immnKhAojkXNNvuJpaFptY2m2zQ65TNQzlXi7CrFzc" />
     <link rel="stylesheet" href="index.css?v=4">
 </head>
 <body>
